css/main.css
#frameworkname{
  position: relative;
  margin:20px;
  padding: 20px;
  border:5px solid rgb(241, 226, 95);
  border-radius: 20px;
  background-position: center;
  background-size: cover;
}

#theName{
  font-size: 26px;
  font-weight: 800;
  font-family: serif;
  text-transform: uppercase;
  filter: blur(0px);
}

#description, #definition{
  font-size: 15px;
  font-weight: 400;
  text-transform:none;
  font-family: sans-serif;
  filter: blur(0px);
}

.generate{
  border: 3px solid rgb(34, 75, 145);
  background: none;
  color:rgb(34, 75, 145);
  padding-left: 20px;
  padding-right: 20px;
}
#generate:hover{
  background: rgb(34, 75, 145);
  color:rgb(255,255,255);
}

@media only screen and (min-width: 400px){
  #theName{
    font-size: 40px;
}
}
@media only screen and (min-width: 768px){
  #theName{
    font-size: 80px;
}
}

.jumbotron{
  background-color: rgb(241, 226, 95);
}


#trnt{
  position: relative;
  margin-left: auto;
  margin-right:auto;
  width:125px;
  text-align: center;
  display: none;
  margin-bottom: 40px;
}
.trnt_turntable{
  position: relative;
  width:122px;
  margin:auto;
  background: #999999;
}
.trnt_floor{
  position: absolute;
  top:4px;
  left:5px;
  height:50px;
  width:110px;
  border:1px solid rgb(59, 59, 59);
  background: #9c9c9c;
}
.trnt_tape{
  border-bottom: 1px solid #000;
  position: absolute;
  left: 20px;
  top: 50px;
  width: 90px;
  animation-name: trnt_bounce;
  animation-duration: 200ms;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}
.trnt_vinyl{
  background-color: rgb(20, 20, 20);
  display: inline-block;
  border-radius: 30px;
  height:60px;
  width:60px;
  animation-name: trnt_spin;
  animation-duration: 300ms;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;
}
.trnt_vinyl_r{
  background-color: rgb(20, 20, 20);
  border-radius: 30px;
  height:60px;
  width:60px;
  float: right;
  animation-name: trnt_spin;
  animation-duration: 300ms;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;

}

.trnt_wheel{
  position: absolute;
  border-radius: 50px;
  border:1px solid rgb(143, 143, 143);
}

.trnt_wheel-1{
  left:4px;
  top:4px;
  height: 50px;
  width: 50px;
}

.trnt_wheel-2{
  left:7px;
  top:7px;
  height: 44px;
  width: 44px;
}

.trnt_wheel-3{
  left:10px;
  top:10px;
  height: 38px;
  width: 38px;
}

.trnt_hole{
  position: absolute;
  top:29px;
  left:29px;
  border-radius: 5px;
  background-color: rgb(20, 20, 20);
  height:2px;
  width:2px;
  z-index:999;
}
.trnt_middle{
  z-index:99;
  position: absolute;
  left:23px;
  top:23px;
  height: 14px;
  width: 14px;
  border-radius: 50px;
  background: #999999;;
}

.trnt_cover{
  position: absolute;
  height:57px;
  width: 26px;
  background-color: rgb(20, 20, 20);
  top:2px;
  border-radius: 10px;
  z-index:9;
  left:16px;
}

.trnt_text{
  font-size: 1em;
  font-family: "Pacifico",serif;
}



@keyframes trnt_spin {
  from {
    transform: rotate(0deg);
    } to {
      transform: rotate(460deg);
    }
  }


    @keyframes trnt_bounce {
      0%   { transform: scale(1,1)    translateY(0); }
           10%  { transform: scale(1.1,.9) translateY(0); }
           30%  { transform: scale(.9,1.1) translateY(-1px); }
           50%  { transform: scale(1,1)    translateY(0); }
           57%  { transform: scale(1,1)    translateY(-1px); }
           100%  { transform: scale(1,1)    translateY(0); }
     }

